@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amindexd.c,v 1.106.2.8 2006/12/12 13:19:19 martinea Exp $
+ * $Id: amindexd.c,v 1.106.2.9 2007/02/07 15:23:45 martinea Exp $
  *
  * This is the server daemon part of the index client/server system.
  * It is assumed that this is launched from inetd instead of being
@@ -151,6 +151,7 @@ uncompress_file(
     int indexfd;
     int nullfd;
     int debugfd;
+    int debugnullfd;
     char line[STR_SIZE];
     FILE *pipe_stream;
     pid_t pid_gzip;
@@ -192,7 +193,13 @@ uncompress_file(
 #  define PARAM_UNCOMPRESS_OPT skip_argument
 #endif
 
-	debugfd = debug_fd();
+	debugfd = dbfd();
+	debugnullfd = 0;
+	if(debugfd < 0) {
+	    debugfd = open("/dev/null", O_WRONLY);
+	    debugnullfd = 1;
+	}
+
 	nullfd = open("/dev/null", O_RDONLY);
 	indexfd = open(filename,O_WRONLY|O_CREAT, 0600);
 	if (indexfd == -1) {
@@ -227,6 +234,8 @@ uncompress_file(
 	pid_sort = pipespawn(SORT_PATH, STDIN_PIPE,
 			     &pipe_to_sort, &indexfd, &debugfd,
 			     SORT_PATH, NULL);
+	if (debugnullfd == 1)
+	    aclose(debugfd);
 	aclose(indexfd);
 
 	/* send all ouput from uncompress process to sort process */
