@@ -1,3 +1,6 @@
+2007-02-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amindexd.c: Use dbfd.
+
 2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
 	* Amanda 2.5.1p3 released.
 	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p3).
